src/test/ui/issues/1-9999/issue-6458-3.rs
use std::mem;

fn main() {
    mem::transmute(0);
    //~^ ERROR type annotations needed [E0282]
}
